@startuml
title Nachricht-Scanner - Zustandsdiagramm
hide empty description

[*] --> AppStart
state AppStart : HTML geladen: _ghtml_nachricht_scanner_welches_ohr_hort_mit.html
AppStart --> Initialisierung : Script(s) laden
Initialisierung --> DatenLaden : fetch Konfiguration/Leveldaten
DatenLaden --> Bereit : Daten erfolgreich geladen
DatenLaden --> Fehler : Laden fehlgeschlagen
Bereit --> Spielzyklus : Erste Runde starten

state Spielzyklus {
  [*] --> WarteAufEingabe
  WarteAufEingabe --> Auswertung : Nutzerinteraktion
  Auswertung --> Feedback : Regeln pruefen + Score/HUD aktualisieren
  Feedback --> FortschrittPruefen : Weiter / Auto-Fortschritt
  FortschrittPruefen --> WarteAufEingabe : Weitere Aufgabe offen
  FortschrittPruefen --> Abschluss : Letzte Aufgabe erledigt
}

Abschluss --> Neustart : Neustart ausloesen
Neustart --> Initialisierung : State zuruecksetzen
Abschluss --> [*] : Sitzung verlassen
Fehler --> [*]

note right of Initialisierung
Quelle: databases/Teil01 Grundlagen/database/BWL/Kommunikation & Schulung/4-Ohren-Modell/nachricht_scanner_welches_ohr_hort_mit/_ghtml_nachricht_scanner_welches_ohr_hort_mit.html
JS: _gjs_nachricht_scanner_welches_ohr_hort_mit.js
fetch: _data/_gg01_nachricht_scanner_welches_ohr_hort_mit.json
Merkmale: neustart, score, fehlerbehandlung
end note
@enduml
